2004-04-07  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-config-factory.c (mail_config_control_factory_cb): No
	longer need the Apply stuff.

	* em-mailer-prefs.c (em_mailer_prefs_construct): Don't call a
	function that doesn't exist anymore.

2004-04-06  Jeffrey Stedfast  <fejj@ximian.com>

	* em-mailer-prefs.c (em_mailer_prefs_construct): Changed to save
	the settings in the signal callbacks.
	(em_mailer_prefs_apply): Don't save the settings here.

	* em-composer-prefs.c (em_composer_prefs_apply): Don't save the
	settings here.
	(em_composer_prefs_construct): Changed to save the settings in the
	signal callbacks.

2004-04-06  Not Zed  <NotZed@Ximian.com>

	* em-folder-tree.c (emft_tree_row_expanded): ref the emfoldertree
	in our thread message.
	(em_folder_tree_set_selected): same.
	(emft_get_folder_info__free): unref it.

	* mail-folder-cache.c (ping_store): use thread_queued_slow not
	thread_queued - we dont care when it runs.

	* em-folder-view.c (emfv_set_folder_uri): use thread_new for
	getting the folder, we do elsewhere, and it aids interactivity.

2004-04-05  Jeffrey Stedfast  <fejj@ximian.com>

	* em-migrate.c (em_migrate_dir): Migrate the thread_list
	setting. Fixes bug #56297.

2004-04-05  Not Zed  <NotZed@Ximian.com>

	* em-format-html-display.c (efhd_xpkcs7mime_button): if we have no
	sign status, use signed-nokey, rather than no icon.
	(efhd_xpkcs7mime_viewcert_clicked): show the certificate viewer
	since certificate_viewer_show doesn't show it.
	(efhd_xpkcs7mime_viewcert_foad): foad foad foad.  The api changed
	and we need to foad it ourselves.

	** See bug #52822.

	* em-format-html-display.c (efhd_xpkcs7mime_add_cert_table): if we
	can't find the cert, then desensitise the cert button.

	** See bug # 56402.

	* mail-folder-cache.c (update_folders): if we're cancelled, noop.
	(mail_note_store_remove): mark the update data cancelled.

	* mail-ops.c (add_special_info): removed, this is done in camel
	now.